cmake_minimum_required(VERSION 3.6)
project(src)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        client/demo.cpp
        client/hello-ssdb.cpp
        client/SSDB_client.h
        client/SSDB_impl.cpp
        client/SSDB_impl.h
        net/fde.cpp
        net/fde.h
        net/fde_epoll.cpp
        net/fde_select.cpp
        net/link.cpp
        net/link.h
        net/link_redis.cpp
        net/link_redis.h
        net/proc.cpp
        net/proc.h
        net/resp.cpp
        net/resp.h
        net/server.cpp
        net/server.h
        net/test.cpp
        net/test2.cpp
        net/worker.cpp
        net/worker.h
        ssdb/binlog.cpp
        ssdb/binlog.h
        ssdb/const.h
        ssdb/iterator.cpp
        ssdb/iterator.h
        ssdb/options.cpp
        ssdb/options.h
        ssdb/ssdb.h
        ssdb/ssdb_impl.cpp
        ssdb/ssdb_impl.h
        ssdb/t_hash.cpp
        ssdb/t_hash.h
        ssdb/t_kv.cpp
        ssdb/t_kv.h
        ssdb/t_queue.cpp
        ssdb/t_queue.h
        ssdb/t_zset.cpp
        ssdb/t_zset.h
        ssdb/test.cpp
        ssdb/ttl.cpp
        ssdb/ttl.h
        util/app.cpp
        util/app.h
        util/bytes.cpp
        util/bytes.h
        util/config.cpp
        util/config.h
        util/daemon.h
        util/file.h
        util/ip_filter.h
        util/line.h
        util/list.h
        util/log.cpp
        util/log.h
        util/sorted_set.cpp
        util/sorted_set.h
        util/strings.h
        util/test_sorted_set.cpp
        util/thread.h
        backend_dump.cpp
        backend_dump.h
        backend_sync.cpp
        backend_sync.h
        cluster.cpp
        cluster.h
        cluster_migrate.cpp
        cluster_migrate.h
        cluster_store.cpp
        cluster_store.h
        include.h
        proc_cluster.cpp
        proc_hash.cpp
        proc_kv.cpp
        proc_queue.cpp
        proc_zset.cpp
        serv.cpp
        serv.h
        slave.cpp
        slave.h
        ssdb-server.cpp
        version.h)

add_executable(src ${SOURCE_FILES})